--- a/home2016.css
+++ b/home2016.css
@@ -40,7 +40,7 @@ Wednesday 06, April, 2016
 
 .toolbar .navbar-collapse .navbar-nav li a { padding: 10px; }
 
-.toolbar ul li a { color: #003663; -webkit-transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -o-transition: all .25s ease-in-out; transition: all .25s ease-in-out; }
+.toolbar ul li a { color: #003663; -webkit-transition: all 0.25s ease-in-out; -moz-transition: all 0.25s ease-in-out; -o-transition: all 0.25s ease-in-out; transition: all 0.25s ease-in-out; }
 
 .toolbar ul li a:hover { background: #ecf0f1; color: #333; }
 
@@ -49,6 +49,8 @@ Wednesday 06, April, 2016
 .toolbar li.active a { background: #ecf0f1 !important; color: #333 !important; }
 
 .navbar { border-radius: 0 !important; margin-bottom: 0; }
+
+.navbar-nav { margin: 0; }
 
 .navbar-default { border: none; }
 
@@ -76,16 +78,15 @@ Wednesday 06, April, 2016
 
 @media only screen and (max-width: 767px) { .nav-social { background: #d11242; } }
 
-@media only screen and (min-width: 768px) { .navbar .navbar-nav { display: inline-block; float: none; }
-  .navbar .navbar-collapse { text-align: center; }
+@media only screen and (min-width: 768px) { .navbar .navbar-collapse { text-align: center; }
   .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
   .navbar .navbar-nav > .quicktools { display: inline-block; float: none; margin-bottom: -2px; }
   .navbar .navbar-collapse { text-align: center; }
   .mainBlueNavigation { background: url("/media/assets/homepagespring2016/homne_headerbg.jpg") no-repeat; background-size: cover; }
-  .mainBlueNavigation .navbar .navbar-nav { display: inline-block; float: none; }
   .mainBlueNavigation ul li a { color: #fff !important; font-size: 1.2em; font-weight: 100; font-family: 'Fjalla One', sans-serif; padding-top: 70px !important; }
   ul.dropdown-menu > li a { padding-top: 0; }
-  ul.dropdown-menu > li a { font-family: sans-serif; } }
+  ul.dropdown-menu > li a { font-family: sans-serif; }
+  ul.nav.navbar-nav.navbar-center { list-style: none !important; margin: 0 auto !important; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; float: none; } }
 
 @media screen and (min-width: 992px) { .msudenver_logo img { width: 165px; margin: 10px 25px; } }
 
