updates styles for caption reverse

--- a/app/_carousel.scss
+++ b/app/_carousel.scss
@@ -119,7 +119,7 @@
     text-align: right;
     text-shadow: none;
 }
-.caption-reverse > .caption-readmore > a {
+.caption-reverse > .caption-readmore {
     color: #003879 !important;
     text-shadow: none;
 }
