--- a/app/_callstoaction.scss
+++ b/app/_callstoaction.scss
@@ -1,3 +1,6 @@
+
+/* Calls to action */
+
 .calls-to-action {
     padding: 25px;
     background: url("/media/assets/homepagespring2016/calltoactbg.png") no-repeat;
@@ -16,6 +19,22 @@
     font-size: 1em;
     text-transform: uppercase;
     font-family: 'Fjalla One', sans-serif;
+}
+// @media screen and (max-width: 320px) {
+//   .calls-to-action {
+//       height: 460px !important;
+//   }
+// }
+
+@media screen and (max-width: 480px) {
+  .calls-to-action {
+      height: 460px !important;
+  }
+}
+@media screen and (max-width: 767px) {
+  .calls-to-action {
+      height: 446px !important;
+  }
 }
 
 @media screen and (min-width: 992px) {
