adds all https to path

--- a/app/_callstoaction.scss
+++ b/app/_callstoaction.scss
@@ -3,7 +3,7 @@
 
 .calls-to-action {
     padding: 25px;
-    background: url("/media/assets/homepagespring2016/calltoactbg.png") no-repeat;
+    background: url("https://msudenver.edu/media/assets/homepagespring2016/calltoactbg.png") no-repeat;
     background-size: cover;
     background-color: rgba(52, 152, 219, 0.72);
     margin-bottom: 20px;
