--- a/app/_toolbar.scss
+++ b/app/_toolbar.scss
@@ -136,7 +136,7 @@
         text-align: center;
     }
     .mainBlueNavigation {
-        background: url("/media/assets/homepagespring2016/home_headerbg.jpg") no-repeat;
+        background: url("https://msudenver.edu/media/assets/homepagespring2016/home_headerbg.jpg") no-repeat;
         background-size: cover;
     }
     .mainBlueNavigation ul li a {
