--- a/home2016.css
+++ b/home2016.css
@@ -159,7 +159,7 @@ Wednesday 06, April, 2016
 @media only screen and (min-width: 768px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; } }
 
 /* Calls to action */
-.calls-to-action { padding: 25px; background: url("https://msudenver.edu/media/assets/homepagespring2016/calltoactbg.png") no-repeat; background-size: cover; background-color: rgba(52, 152, 219, 0.72); margin-bottom: 20px; }
+.calls-to-action { padding: 25px; background: url("media/assets/homepagespring2016/calltoactbg.png") no-repeat; background-size: cover; background-color: rgba(52, 152, 219, 0.72); margin-bottom: 20px; }
 
 .calls-to-action > hr { border-top: 1px solid rgba(255, 255, 255, 0.2); margin-top: 15px; margin-bottom: 15px; }
 
