Fixes issues with padding on content

--- a/app/_home2016.scss
+++ b/app/_home2016.scss
@@ -223,6 +223,7 @@ hr {
 .news-events {
     background: white;
     padding: 0 25px 15px;
+    margin-bottom: 15px;
 }
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:focus,
