--- a/app/_toolbar.scss
+++ b/app/_toolbar.scss
@@ -135,8 +135,8 @@
         text-align: center;
     }
     .mainBlueNavigation {
-        // background: url("media/assets/homepagespring2016/home_headerbg.jpg") no-repeat;
-        background: url("<t4 type='media' id='106586' formatter='image/path'/>") no-repeat;
+        background: url("media/assets/homepagespring2016/home_headerbg.jpg") no-repeat;
+        // background: url("<t4 type='media' id='106586' formatter='image/path'/>") no-repeat;
         background-size: cover;
     }
     .mainBlueNavigation ul li a {
