angle opacity on hover behavior

--- a/app/_carousel.scss
+++ b/app/_carousel.scss
@@ -24,10 +24,6 @@
     opacity: 0.0;
 }
 
-.carousel-control:hover {
-    opacity: 0.5;
-}
-
 .fa-inverse {
     color: #003879 !important;
 }
@@ -38,6 +34,10 @@
 
 .carousel-inner>.item>img {
     margin: auto;
+}
+
+#carousel-homepage:hover > .carousel-control {
+    opacity: 0.5;
 }
 
 .item {
