--- a/home2016.css
+++ b/home2016.css
@@ -106,13 +106,13 @@ Wednesday 06, April, 2016
 
 .carousel-control { opacity: 0.0; }
 
-.carousel-control:hover { opacity: 0.5; }
-
 .fa-inverse { color: #003879 !important; }
 
 .fa-lg { font-size: 1.8em; }
 
 .carousel-inner > .item > img { margin: auto; }
+
+#carousel-homepage:hover > .carousel-control { opacity: 0.5; }
 
 .item { overflow: hidden; }
 
