--- a/app/_carousel.scss
+++ b/app/_carousel.scss
@@ -38,6 +38,10 @@
 
 #carousel-homepage:hover > .carousel-control {
     opacity: 0.5;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 .item {
